# atmine

./: .astylerc  .gitignore  InstallationGuide.md  ProjectHome.md  narratorOrderGraph.md
ATSarf/: CMakeGraphVizOptions.cmake  CMakeLists.txt  Doxyfile  makefile
ATSarf/QT make/: ATSarfTrie  ATSarfTrie.pro  Makefile  Makefile.Debug  Makefile.Release  ideas  ideas about graph  notes_about_hadith_accuracy  priority_todo  todo  ui_mainwindow.h
ATSarf/QT make/release/: moc_mainwindow.cpp
ATSarf/apps/: CMakeLists.txt
ATSarf/apps/AMTagger/: CMakeLists.txt  actionsview.cpp  actionsview.h  addtagtypeview.cpp  addtagview.cpp  addtagview.h  afterview.cpp  amfiller.cpp  amtmainwindow.cpp  amtmainwindow.h  atagger.cpp  atagger.h  autotagger.cpp  autotagger.h  binaryf.cpp  binaryf.h  binarym.cpp  binarym.h  colorlisteditor.cpp  commonS.h  crossreferenceview.cpp  crossreferenceview.h  customizemsfview.cpp  customizemsfview.h  customsttview.cpp  customsttview.h  declarationsview.cpp  declarationsview.h  diffview.cpp  diffview.h  edittagtypeview.cpp  edittagtypeview.h  global.h  global_variables.cpp  graphedge.cpp  graphedge.h  graphnode.cpp  graphnode.h  includesview.cpp  includesview.h  (+47 more)
ATSarf/apps/case/: abstractAnnotator.h  abstractTwoLevelAnnotator.cpp  bibleManualTagger.cpp  diacriticsPostProcessing.cpp  graph.cpp  graph.h  hadithChainGraph.h  hadithChainItemModel.h  hadithCommon.cpp  hadithDagItemModel.h  narratorHash.h  narrator_abstraction.cpp  narrator_abstraction.h  phrases  split_affixes.h  suffix_verification.cpp  timeRecognizer.h
ATSarf/apps/demo/: CMakeLists.txt  initializationworker.cpp  initializationworker.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  statusbar.cpp  statusbar.h
ATSarf/apps/diacriticrules/: diacriticrules.cpp  diacriticrules.h  diacriticrulesmain.cpp  myprogressifc.h  wordambiguity.h
ATSarf/apps/diacritics/: diacriticguidelines.cpp  diacriticguidelines.h  diacriticsmain.cpp  gafunctions.cpp  gafunctions.h  myprogressifc.h  vwtrie.cpp  vwtrie.h  wordanalysis.cpp  wordanalysis.h
ATSarf/apps/ex0/: CMakeLists.txt  ex0main.cpp
ATSarf/apps/ex1/: CMakeLists.txt  POSVerb.h  ex1main.cpp
ATSarf/apps/ex2/: CMakeLists.txt  ex2main.cpp
ATSarf/apps/gui/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  test.cpp  test.h  ui_mainwindow.h
ATSarf/apps/mtest/: CMakeLists.txt  mtest.cpp
ATSarf/apps/numnorm/: CMakeLists.txt  number.cpp  number.h  numnorm.cpp  numnorm.h  numsolution.cpp  numsolution.h  word.h
ATSarf/apps/numnormtest/: myprogressifc.h  numnormmain.cpp
ATSarf/apps/sarfenumerate/: CMakeLists.txt  enumerator.cpp  enumerator.h  myprogressifc.h  prefix_enumerate.cpp  prefix_enumerate.h  stem_enumerate.cpp  stem_enumerate.h  suffix_enumerate.cpp  tree_enumerate.h
ATSarf/apps/syn/: CMakeLists.txt  alpha.cpp  alpha.d  alpha.h  gamma.cpp  gamma.h  ger.cpp  ger.d  ger.h  getGloss.cpp  getGloss.h  synmain.cpp  synmain.d
ATSarf/apps/syntest/: CMakeLists.txt  synmain.cpp
ATSarf/apps/worddensity/: CMakeLists.txt  worddensity.cpp  worddensity.h  worddensitymain.cpp
ATSarf/doc/: ConferencesNLP2011.odt  doc.odt
ATSarf/regress/mtest/: analyzer_test_text  bathaa
ATSarf/scripts/: antlrMacrosMakefile  binMakefile  macrosMakefile  qtmocMacrosMakefile
ATSarf/src/: CMakeLists.txt
ATSarf/src/AMTagger/: amtmainwindow.cpp  amtmainwindow.h  amtmainwindow.ui
ATSarf/src/cache/: CMakeLists.txt  Search_by_item_locally.cpp  Search_by_item_locally.h  compatibility_rules.cpp  compatibility_rules.h  database_info_block.cpp  database_info_block.h
ATSarf/src/case/: AbstractTwoLevelAgreement.cpp  AbstractTwoLevelAgreement.h  CMakeLists.txt  GlossSFR.cpp  OneLevelAgreement.cpp  OneLevelAgreement.h  POSVerb.cpp  abstractAnnotator.cpp  abstractGraph.h  abstractTwoLevelAnnotator.cpp  abstractTwoLevelAnnotator.h  affixTreeTraversal.h  affix_verification.cpp  atbDiacriticExperiment.cpp  atbDiacriticExperiment.h  atbExperiment.cpp  atbExperiment.h  bibleGeneology.cpp  bibleGeneology.h  bibleManualTagger.cpp  bibleManualTagger.h  biographies.cpp  biographies.h  biographyGraphUtilities.cpp  biographyGraphUtilities.h  chain_graph.cpp  chain_graph.h  diacriticDisambiguation.cpp  diacriticDisambiguation.h  diacriticsPostProcessing.cpp  diacriticsPostProcessing.h  geneMainwindow.cpp  genealogyInterAnnotatorAgreement.cpp  genealogyInterAnnotatorAgreement.h  genealogyItem.h  graph.cpp  graph.h  graph_nodes.cpp  graph_nodes.h  hadith.h  (+39 more)
ATSarf/src/common/: CMakeLists.txt  Item_Structures.cpp  Item_Structures.h  StemNode.cpp  StemNode.h  Tree.h  Tree2Dot.h  TreeFilter.h  TreeVisitor.h  a.cpp  atmTrie.h  common.cpp  common.h  global_variables.cpp  inflections.h  initialize_tool.cpp  initialize_tool.h  letter_node.cpp  letter_node.h  node.cpp  node.h  node_info.h  result_node.h  sarf.cpp  sarf.h  solution_position.h  templated_tree.h  tree.cpp  tree.h  word.cpp  word.h
ATSarf/src/ex1/: MainWindow.cpp  MainWindow.h  POSVerb.cpp  POSVerb.d  POSVerb.h  ex1main.cpp  ex1main.d  moc_MainWindow.cpp  ui_mainwindow.h
ATSarf/src/ex2/: GlossSFR.cpp  GlossSFR.d  ex2main.cpp  ex2main.d
ATSarf/src/gui/: mainwindow.cpp  mainwindow.h  mainwindow.ui  test.cpp  test.h  ui_mainwindow.h
ATSarf/src/log/: ATMProgressIFC.cpp  ATMProgressIFC.h  CMakeLists.txt  logger.h
ATSarf/src/markov/: Gram2MMB.h  MMB.h  TopicTexts.h  maxArray.h  topiccomparator.h  topiccounter.h
ATSarf/src/sarf/: CMakeLists.txt  MMB.h  prefix_search.cpp  prefix_search.h  stem_search.cpp  stem_search.h  stemmer.cpp  stemmer.h  suffix_search.cpp  suffix_search.h  tree_search.cpp  tree_search.h
ATSarf/src/sql/: CMakeLists.txt  Retrieve_Template.cpp  Retrieve_Template.h  Search_Compatibility.cpp  Search_Compatibility.h  Search_by_category.cpp  Search_by_category.h  Search_by_item.cpp  Search_by_item.h  sql_queries.cpp  sql_queries.h
ATSarf/src/util/: CMakeLists.txt  Math_functions.cpp  Math_functions.h  Ptr.h  Quadruplet.h  Triplet.h  ambiguity.cpp  ambiguity.h  (+28 more)
ATSarf/testdata/: cycle2.txt  cycles  cycles_test  kafi8_new.txt  test4
ATSarf/tests/: CMakeLists.txt  cycles_modified
ATSarf/third/: datrie
(+1176 files in other folders)
