cmake_minimum_required(VERSION 2.8.11)
project(atmine-libs)

# Add subprojects
add_subdirectory(build)
add_subdirectory(cache)
add_subdirectory(case)
add_subdirectory(common)
add_subdirectory(log)
add_subdirectory(sarf)
add_subdirectory(sql)
add_subdirectory(util)

# Exporting include dirs
set(BUILD_INCLUDE_DIRS ${BUILD_INCLUDE_DIRS} PARENT_SCOPE)
set(CACHE_INCLUDE_DIRS ${CACHE_INCLUDE_DIRS} PARENT_SCOPE)
set(CASE_INCLUDE_DIRS ${CASE_INCLUDE_DIRS} PARENT_SCOPE)
set(COMMON_INCLUDE_DIRS ${COMMON_INCLUDE_DIRS} PARENT_SCOPE)
set(LOG_INCLUDE_DIRS ${LOG_INCLUDE_DIRS} PARENT_SCOPE)
set(SARF_INCLUDE_DIRS ${SARF_INCLUDE_DIRS} PARENT_SCOPE)
set(SQL_INCLUDE_DIRS ${SQL_INCLUDE_DIRS} PARENT_SCOPE)
set(UTIL_INCLUDE_DIRS ${UTIL_INCLUDE_DIRS} PARENT_SCOPE)

# Exporting library dirs
set(BUILD_LIBRARY_DIRS ${BUILD_LIBRARY_DIRS} PARENT_SCOPE)
set(CACHE_LIBRARY_DIRS ${CACHE_LIBRARY_DIRS} PARENT_SCOPE)
set(CASE_LIBRARY_DIRS ${CASE_LIBRARY_DIRS} PARENT_SCOPE)
set(COMMON_LIBRARY_DIRS ${COMMON_LIBRARY_DIRS} PARENT_SCOPE)
set(LOG_LIBRARY_DIRS ${LOG_LIBRARY_DIRS} PARENT_SCOPE)
set(SARF_LIBRARY_DIRS ${SARF_LIBRARY_DIRS} PARENT_SCOPE)
set(SQL_LIBRARY_DIRS ${SQL_LIBRARY_DIRS} PARENT_SCOPE)
set(UTIL_LIBRARY_DIRS ${UTIL_LIBRARY_DIRS} PARENT_SCOPE)
